--- a/Back/package.json
+++ b/Back/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
     "morgan": "~1.9.1",
+    "supertest": "^4.0.2",
     "validator": "^12.2.0"
   }
 }
