--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,17 +1,27 @@
-name: Android CI
-
-on: [push]
-
+on: push
+name: Test, Build and Release apk
 jobs:
   build:
-
+    name: Build APK
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Build with Gradle
-      run: ./gradlew build
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        flutter-version: '1.7.8+hotfix.4'
+    - name: Flutter__GetDependencies
+      working-directory: ./Front
+      run: flutter pub get
+    - name: Flutter__Test
+      working-directory: ./Front
+      run: flutter test
+    - name: Flutter__Build__Debug
+      working-directory: ./Front
+      run: flutter build apk --debug --split-per-abi
+    - name: Create a Release APK
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "Front/build/app/outputs/apk/debug/*.apk"
