--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,5 +1,10 @@
-on: push
 name: Test, Build and Release apk
+on:
+  push:
+    branches:
+      - master
+    tags:
+      - '!refs/tags/*'
 jobs:
   build:
     name: Build APK
@@ -22,7 +27,6 @@ jobs:
       working-directory: ./Front
       run: flutter build apk --debug --split-per-abi
     - name: Create a Release APK
-      tags: "v0.1"
       uses: ncipollo/release-action@v1
       with:
         artifacts: "Front/build/app/outputs/apk/debug/*.apk"
