--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,6 +8,10 @@ jobs:
     name: Build APK
     runs-on: ubuntu-latest
     steps:
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
@@ -28,7 +32,8 @@ jobs:
       working-directory: ./Front
       run: flutter build apk --debug --split-per-abi
     - name: Create a Release APK
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       uses: ncipollo/release-action@v1
       with:
         artifacts: "Front/build/app/outputs/apk/debug/*.apk"
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
