--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,17 +5,19 @@ on:
   push:
     tags:
       - '!refs/tags/*'
-env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  pull_request:
+    
 jobs:
   build:
     name: Build APK
     runs-on: ubuntu-latest
     steps:
+
     - name: Dump GitHub context
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
+
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
@@ -23,19 +25,44 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         flutter-version: '1.7.8+hotfix.4'
+
     - name: Flutter__Pub__Get
       working-directory: ./Front
       run: flutter pub get
+
     - name: Flutter__Upgrade
       working-directory: ./Front
       run: flutter upgrade
+
     - name: Flutter__Test
       working-directory: ./Front
       run: flutter test
-    - name: Flutter__Build__Debug
+
+    - name: Flutter__Build
       working-directory: ./Front
-      run: flutter build apk --debug --split-per-abi
-    - name: Create a Release APK
-      uses: ncipollo/release-action@v1
+      run: flutter build apk --split-per-abi
+
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        artifacts: "Front/build/app/outputs/apk/debug/*.apk"
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+
+    - name: Upload release asset
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./Front/Android/app/build/outputs/apk/release/app-release.apk
+        asset_name: nowaste.apk
+        asset_content_type: application/vnd.android.package-archive
+    # - name: Create a Release APK
+    #   uses: ncipollo/release-action@v1
+    #   with:
+    #     artifacts: "Front/build/app/outputs/apk/debug/*.apk"
