--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,11 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Dump GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
-
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
@@ -59,10 +54,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./Front/Android/app/build/outputs/apk/release/app-release.apk
+        asset_path: ./Front/Android/app/build/outputs/apk/release/${{ steps.create_release.outputs.release_name }}.apk
         asset_name: nowaste.apk
         asset_content_type: application/vnd.android.package-archive
-    # - name: Create a Release APK
-    #   uses: ncipollo/release-action@v1
-    #   with:
-    #     artifacts: "Front/build/app/outputs/apk/debug/*.apk"
