--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,9 @@ jobs:
     name: Build APK
     runs-on: ubuntu-latest
     steps:
-
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=version::${GITHUB_REF#refs/tags/}
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
@@ -44,8 +46,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
-        release_name: nowaste_${{ github.ref }}
-        draft: false
+        release_name: nowaste_${{ steps.get_version.outputs.version }}
+        draft: true
         prerelease: false
 
     - name: Upload release asset
@@ -54,6 +56,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./Front/Android/app/build/outputs/apk/release/nowaste_${{ github.ref }}.apk
-        asset_name: nowaste_${{ github.ref }}.apk
+        asset_path: ./Front/Android/app/build/outputs/apk/release/nowaste_${{ steps.get_version.outputs.version }}.apk
+        asset_name: nowaste_${{ steps.get_version.outputs.version }}.apk
         asset_content_type: application/vnd.android.package-archive
