--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -45,10 +45,11 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
+        tag_name: ${{ steps.get_version.outputs.version }}
         release_name: nowaste_${{ steps.get_version.outputs.version }}
         draft: true
         prerelease: false
+    - run: ls -alR; echo ${{ steps.create_release.outputs.upload_url }}; echo ./Front/android/app/build/outputs/apk/release/nowaste_${{ steps.get_version.outputs.version }}.apk
 
     - name: Upload release asset
       uses: actions/upload-release-asset@v1.0.1
@@ -56,6 +57,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./Front/Android/app/build/outputs/apk/release/nowaste_${{ steps.get_version.outputs.version }}.apk
+        asset_path: ./Front/android/app/build/outputs/apk/release/nowaste_${{ steps.get_version.outputs.version }}.apk
         asset_name: nowaste_${{ steps.get_version.outputs.version }}.apk
         asset_content_type: application/vnd.android.package-archive
