--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - name: Get the version
       id: get_version
-      run: echo ::set-output name=version::${GITHUB_REF#refs/tags/}
+      run: echo ::set-output name=version::${{GITHUB_REF#refs/tags/}}
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
@@ -45,18 +45,38 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.get_version.outputs.version }}
+        tag_name: 0.${{ steps.get_version.outputs.version }}
         release_name: nowaste_${{ steps.get_version.outputs.version }}
         draft: true
         prerelease: false
-    - run: ls -alR; echo ${{ steps.create_release.outputs.upload_url }}; echo ./Front/android/app/build/outputs/apk/release/nowaste_${{ steps.get_version.outputs.version }}.apk
+    - run: ls -alr ./Front; echo ${{ github.event.release.tag_name }};
 
-    - name: Upload release asset
+    - name: Upload release asset armeabi
       uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./Front/android/app/build/outputs/apk/release/nowaste_${{ steps.get_version.outputs.version }}.apk
-        asset_name: nowaste_${{ steps.get_version.outputs.version }}.apk
+        asset_path: ./Front/build/app/outputs/apk/release/app-armeabi-v7a-release.apk
+        asset_name: nowaste-${{ github.event.release.tag_name }}-armeabi-v7a.apk
         asset_content_type: application/vnd.android.package-archive
+    - name: Upload release asset arm64-v8a
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./Front/build/app/outputs/apk/release/app-arm64-v8a-release.apk
+        asset_name: nowaste-${{ github.event.release.tag_name }}-arm64-v8a.apk
+        asset_content_type: application/vnd.android.package-archive
+    - name: Upload release asset x86_64
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./Front/build/app/outputs/apk/release/app-x86_64-release.apk
+        asset_name: nowaste-${{ github.event.release.tag_name }}-x86_64.apk
+        asset_content_type: application/vnd.android.package-archive
+✓ Built build/app/outputs/apk/release/app-arm64-v8a-release.apk (5.6MB).
+✓ Built build/app/outputs/apk/release/app-x86_64-release.apk
