--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,9 +12,9 @@ jobs:
     name: Build APK
     runs-on: ubuntu-latest
     steps:
-    - name: Get the version
-      id: get_version
-      run: echo ::set-output name=version::${{GITHUB_REF#refs/tags/}}
+    # - name: Get the version
+    #   id: get_version
+    #   run: echo ::set-output name=version::${{GITHUB_REF#refs/tags/}}
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
@@ -45,8 +45,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: 0.${{ steps.get_version.outputs.version }}
-        release_name: nowaste_${{ steps.get_version.outputs.version }}
+        tag_name: ${{ github.event.release.tag_name }}
+        release_name: nowaste_${{ github.event.release.tag_name }}
         draft: true
         prerelease: false
     - run: ls -alr ./Front; echo ${{ github.event.release.tag_name }};
