--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,9 +12,6 @@ jobs:
     name: Build APK
     runs-on: ubuntu-latest
     steps:
-    # - name: Get the version
-    #   id: get_version
-    #   run: echo ::set-output name=version::${{GITHUB_REF#refs/tags/}}
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
@@ -38,6 +35,7 @@ jobs:
     - name: Flutter__Build
       working-directory: ./Front
       run: flutter build apk --split-per-abi
+    - run: ls -alr ./Front; echo ${{ github.event.release.tag_name }};
 
     - name: Create release
       id: create_release
@@ -45,11 +43,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.event.release.tag_name }}
+        tag_name: ${{ github.ref }}
         release_name: nowaste_${{ github.event.release.tag_name }}
         draft: true
         prerelease: false
-    - run: ls -alr ./Front; echo ${{ github.event.release.tag_name }};
 
     - name: Upload release asset armeabi
       uses: actions/upload-release-asset@v1.0.1
