--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,8 +5,6 @@ on:
   push:
     tags:
       - '!refs/tags/*'
-  pull_request:
-    
 jobs:
   build:
     name: Build APK
@@ -35,7 +33,12 @@ jobs:
     - name: Flutter__Build
       working-directory: ./Front
       run: flutter build apk --split-per-abi
-    - run: ls -alr ./Front; echo ${{ github.event.release.tag_name }};
+
+    - name: Generate build number
+      id: buildnumber
+      uses: einaregilsson/build-number@v2 
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create release
       id: create_release
@@ -44,7 +47,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
-        release_name: nowaste_${{ github.event.release.tag_name }}
+        release_name: nowaste-${{ steps.buildnumber.outputs.build_number }}
         draft: true
         prerelease: false
 
@@ -55,7 +58,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./Front/build/app/outputs/apk/release/app-armeabi-v7a-release.apk
-        asset_name: nowaste-${{ github.event.release.tag_name }}-armeabi-v7a.apk
+        asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}-armeabi-v7a.apk
         asset_content_type: application/vnd.android.package-archive
     - name: Upload release asset arm64-v8a
       uses: actions/upload-release-asset@v1.0.1
@@ -64,7 +67,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./Front/build/app/outputs/apk/release/app-arm64-v8a-release.apk
-        asset_name: nowaste-${{ github.event.release.tag_name }}-arm64-v8a.apk
+        asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}-arm64-v8a.apk
         asset_content_type: application/vnd.android.package-archive
     - name: Upload release asset x86_64
       uses: actions/upload-release-asset@v1.0.1
@@ -73,5 +76,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./Front/build/app/outputs/apk/release/app-x86_64-release.apk
-        asset_name: nowaste-${{ github.event.release.tag_name }}-x86_64.apk
+        asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}-x86_64.apk
         asset_content_type: application/vnd.android.package-archive
