--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,8 +2,10 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 name: Test, Build and Release apk
 on:
-  push:
   pull_request:
+  push:
+    branches:
+      - master
 jobs:
   build:
     name: Build APK
@@ -59,6 +61,7 @@ jobs:
         asset_path: ./Front/build/app/outputs/apk/release/app-armeabi-v7a-release.apk
         asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}-armeabi-v7a.apk
         asset_content_type: application/vnd.android.package-archive
+
     - name: Upload release asset arm64-v8a
       uses: actions/upload-release-asset@v1.0.1
       env:
@@ -68,6 +71,7 @@ jobs:
         asset_path: ./Front/build/app/outputs/apk/release/app-arm64-v8a-release.apk
         asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}-arm64-v8a.apk
         asset_content_type: application/vnd.android.package-archive
+
     - name: Upload release asset x86_64
       uses: actions/upload-release-asset@v1.0.1
       env:
