--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,13 +3,16 @@ env:
 name: Test, Build and Release apk
 on:
   pull_request:
+    branches:
+      - master
   push:
     branches:
       - master
 jobs:
-  build:
-    name: Build APK
+
+  test:
     runs-on: ubuntu-latest
+    name: Build and run tests
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -35,9 +38,14 @@ jobs:
       working-directory: ./Front
       run: flutter build apk --split-per-abi
 
+
+  delivery:  
+    name: Delivery APKs on Github package
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
     - name: Generate build number
       id: buildnumber
-      if: github.event_name == 'pull_request'
       uses: einaregilsson/build-number@v2 
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
