--- a/Back/package.json
+++ b/Back/package.json
@@ -15,11 +15,12 @@
     "geojson": "^0.5.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^7.0.0",
-    "mongodb": "^3.4.0",
-    "mongoose": "^5.8.1",
+    "mocha": "^7.0.1",
+    "mongodb": "^3.5.2",
+    "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
     "supertest": "^4.0.2",
-    "validator": "^12.2.0"
+    "validator": "^12.2.0",
+    "winston": "^3.2.1"
   }
 }
