--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,11 +3,11 @@ env:
 name: Test, Build and Release apk
 on:
   pull_request:
-    branches:
-      - master
   push:
     branches:
       - master
+    tags-ignore:
+      - 'v0.*'
 jobs:
 
   test:
