--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -6,8 +6,8 @@ env:
 
 on:
   pull_request:
-    branches-ignore:
-      - master
+    branches:
+      - '*'
   push:
     branches:
       - master
