--- a/Back/.envDefault
+++ b/Back/.envDefault
@@ -1,6 +1,6 @@
 NODE_ENV=development
 # Set your JTW token for test information here
-TOKEN_TEST=
+TOKEN_OLD_TEST=
 # Set your JTW secret key information here
 JWTSECRETKEY=
 # Set your database connection information here
