--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -38,14 +38,14 @@ jobs:
       #     prefix: nowaste
       #     token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Use MariaDB
-        uses: getong/mariadb-action@v1.1
-        with:
-          character set server: 'utf8'
-          collation server: 'utf8_general_ci'
-          mariadb version: '10.4.10'
-          mysql user: ${{ DB_NAME }}
-          mysql password: ${{ DB_PASSWORD }}
+      # - name: Use MariaDB
+      #   uses: getong/mariadb-action@v1.1
+      #   with:
+      #     character set server: 'utf8'
+      #     collation server: 'utf8_general_ci'
+      #     mariadb version: '10.4.10'
+      #     mysql user: ${{ DB_NAME }}
+      #     mysql password: ${{ DB_PASSWORD }}
 
       # - name: Setup MariaDB data
       #   working-directory: ./Back
