--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,6 +15,8 @@ on:
   pull_request:
     branches:
       - master
+      - 'Back/*'
+      - 'Front/*'  
   push:
     branches:
       - master
@@ -28,27 +30,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      # - name: Generate build number
-      #   id: buildnumber
-      #   uses: einaregilsson/build-number@v2 
-      #   with:
-      #     prefix: nowaste
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Use MariaDB
-      #   uses: getong/mariadb-action@v1.1
-      #   with:
-      #     character set server: 'utf8'
-      #     collation server: 'utf8_general_ci'
-      #     mariadb version: '10.4.10'
-      #     mysql user: ${{ DB_NAME }}
-      #     mysql password: ${{ DB_PASSWORD }}
-
-      # - name: Setup MariaDB data
-      #   working-directory: ./Back
-      #   run: mysql -u root -p${{ DB_PASSWORD }} test < models/database/nowasteDB.sql
-
+      
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
