--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,13 +4,19 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   TOKEN_OLD_TEST: ${{ secrets.TOKEN_OLD_TEST }}
   JWTSECRETKEY: ${{ secrets.JWTSECRETKEY }}
+  NODE_ENV: test
+  DB_HOST: localhost
+  DB_USER: root
+  DB_PASSWORD: rootInThePlace
+  DB_NAME: test
+  CI: true
 
 on:
   pull_request:
     branches:
       - master
-      - 'Back/*'
-      - 'Front/*'  
+      - 'Back*'
+      - 'Front*'  
   push:
     branches:
       - master
@@ -24,6 +30,27 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      # - name: Generate build number
+      #   id: buildnumber
+      #   uses: einaregilsson/build-number@v2 
+      #   with:
+      #     prefix: nowaste
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Use MariaDB
+        uses: getong/mariadb-action@v1.1
+        with:
+          character set server: 'utf8'
+          collation server: 'utf8_general_ci'
+          mariadb version: '10.4.10'
+          mysql user: ${{ DB_NAME }}
+          mysql password: ${{ DB_PASSWORD }}
+
+      - name: Setup MariaDB data
+        working-directory: ./Back
+        run: mysql -u root -p${{ DB_PASSWORD }} test < models/database/nowasteDB.sql
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
