--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -43,9 +43,9 @@ jobs:
           character set server: 'utf8'
           collation server: 'utf8_general_ci'
           mariadb version: '10.4.10'
-          mysql database: 'test'
-          mysql user: rootTester
-          mysql password: rootInThePlace
+          # mysql database: 'test'
+          # mysql user: rootTester
+          # mysql password: rootInThePlace
 
       - name: Setup MariaDB data
         working-directory: ./Back
