Prevent nodejs workflow fail

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,11 +3,11 @@ name: Node.js CI
 env:
   TOKEN_OLD_TEST: ${{ secrets.TOKEN_OLD_TEST }}
   JWTSECRETKEY: ${{ secrets.JWTSECRETKEY }}
-  NODE_ENV: test
-  DB_HOST: localhost
-  DB_USER: rootTester
-  DB_PASSWORD: rootInThePlace
-  DB_NAME: test
+  NODE_ENV: 'test'
+  DB_HOST: 'localhost'
+  DB_USER: 'rootTester'
+  DB_PASSWORD: 'rootInThePlace'
+  DB_NAME: 'test'
   CI: true
 
 on:
