Prevent nodejs workflow fail

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,10 +4,10 @@ env:
   TOKEN_OLD_TEST: ${{ secrets.TOKEN_OLD_TEST }}
   JWTSECRETKEY: ${{ secrets.JWTSECRETKEY }}
   NODE_ENV: 'test'
-  DB_HOST: 'localhost'
-  DB_USER: 'rootTester'
-  DB_PASSWORD: 'rootInThePlace'
-  DB_NAME: 'test'
+  'DB_HOST': 'localhost'
+  'DB_USER': 'rootTester'
+  'DB_PASSWORD': 'rootInThePlace'
+  'DB_NAME': 'test'
   CI: true
 
 on:
