--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,11 +3,11 @@ name: Node.js CI
 env:
   TOKEN_OLD_TEST: ${{ secrets.TOKEN_OLD_TEST }}
   JWTSECRETKEY: ${{ secrets.JWTSECRETKEY }}
-  NODE_ENV: 'test'
-  'DB_HOST': 'localhost'
-  'DB_USER': 'rootTester'
-  'DB_PASSWORD': 'rootInThePlace'
-  'DB_NAME': 'test'
+  NODE_ENV: test
+  DB_HOST: localhost
+  DB_USER: rootTester
+  DB_PASSWORD: rootInThePlace
+  DB_NAME: test
   CI: true
 
 on:
@@ -49,7 +49,7 @@ jobs:
 
       - name: Setup MariaDB data
         working-directory: ./Back
-        run: mysql -u root -p${{ DB_PASSWORD }} test < models/database/nowasteDB.sql
+        run: mysql -u root -prootInThePlace test < models/database/nowasteDB.sql
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
