--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -43,6 +43,8 @@ jobs:
       - name: Use MariaDB
         uses: getong/mariadb-action@v1.1
         with:
+          host port: 3800
+          container port: 3307 
           character set server: 'utf8'
           collation server: 'utf8_general_ci'
           mariadb version: '10.4.10'
