--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -37,9 +37,6 @@ jobs:
       #     prefix: nowaste
       #     token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Docker pull MariaDB image
-        run: docker pull mariadb
-
       - name: Use MariaDB
         uses: getong/mariadb-action@v1.1
         with:
@@ -48,9 +45,9 @@ jobs:
           character set server: 'utf8'
           collation server: 'utf8_general_ci'
           mariadb version: '10.4.10'
-          # mysql database: 'test'
-          # mysql user: rootTester
-          # mysql password: rootInThePlace
+          mysql database: 'test'
+          mysql user: rootTester
+          mysql password: rootInThePlace
 
       - name: Setup MariaDB data
         working-directory: ./Back
