--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Use MariaDB
         uses: getong/mariadb-action@v1.1
         with:
+          host port: 3800
           container port: 3307 
           character set server: 'utf8'
           collation server: 'utf8_general_ci'
@@ -50,7 +51,7 @@ jobs:
 
       - name: Setup MariaDB data
         working-directory: ./Back
-        run: mysql -u rootTester -prootInThePlace test < models/database/nowasteDB.sql
+        run: mysql -h localhost -P 3800 -u rootTester -prootInThePlace test < models/database/nowasteDB.sql
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
