--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -37,9 +37,6 @@ jobs:
       #     prefix: nowaste
       #     token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Shutdown Ubuntu MySQL (SUDO)
-        run: sudo service mysql stop
-
       - name: Use MariaDB
         uses: getong/mariadb-action@v1.1
         with:
@@ -54,7 +51,7 @@ jobs:
 
       - name: Setup MariaDB data
         working-directory: ./Back
-        run: mysql -h localhost -P 3307 -u root test < ./models/database/nowasteDB.sql
+        run: mysql -h 127.0.0.1 -P 3800 -u root test < ./models/database/nowasteDB.sql
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
