--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -53,6 +53,9 @@ jobs:
           collation server: 'utf8_general_ci'
           mariadb version: '10.4.10'
 
+      - name: Shutdown Ubuntu MySQL (SUDO)
+        run: sudo service mysql start
+
       - name: Setup MariaDB data
         working-directory: ./Back
         run: mysql -h 127.0.0.1 -P 3307 -u root < './models/database/exportDB.sql'
