--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
 
     services:
       mariadb:
-        image: '10.4.10'
+        image: mariadb:latest
         ports:
           - 3309
         env:
