--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Verify MariaDB connection
         env:
-          PORT: ${{ job.services.mariadb.ports[3306] }}
+          PORT: ${{ job.services.mariadb.ports[3309] }}
         run: |
           while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
             sleep 1
@@ -82,7 +82,7 @@ jobs:
 
       - name: Setup MariaDB data
         working-directory: ./Back
-        run: mysql --host 127.0.0.1 --port 3309 -u developer -prootPowa < './models/database/exportDB.sql'
+        run: mysql -h"127.0.0.1" -P"3309" -u developer -prootPowa < './models/database/exportDB.sql'
 
       - name: Install Node.js Application 
         working-directory: ./Back
