--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -49,8 +49,8 @@ jobs:
       #   with:
       #     prefix: nowaste
       #     token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Shutdown Ubuntu MySQL (SUDO)
-        run: sudo service mysql stop
+      # - name: Shutdown Ubuntu MySQL (SUDO)
+      #   run: sudo service mysql stop
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
