--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -82,7 +82,11 @@ jobs:
 
       - name: Setup MariaDB data
         working-directory: ./Back
-        run: mysql -h"127.0.0.1" -P"3309" -u developer -prootPowa < './models/database/exportDB.sql'
+        run: netstat -tulpn
+      
+      - name: Setup MariaDB data
+        working-directory: ./Back
+        run: mysql -P"3309" -u developer -prootPowa < './models/database/exportDB.sql'
 
       - name: Install Node.js Application 
         working-directory: ./Back
