Prevent nodejs workflow fail

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,6 +35,8 @@ jobs:
           MYSQL_PASSWORD: rootPowa
           MYSQL_DATABASE: test
           MYSQL_ROOT_PASSWORD: password
+        ports:
+          - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
