--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -69,8 +69,8 @@ jobs:
       #     mysql password: 'rootPowa' # Required 
 
 
-      # - name: Shutdown Ubuntu MySQL (SUDO)
-      #   run: sudo service mysql start
+      - name: Shutdown Ubuntu MySQL (SUDO)
+        run: sudo service mysql restart
 
       # - name: Verify MariaDB connection
       #   env:
@@ -86,7 +86,7 @@ jobs:
       
       - name: Setup MariaDB data
         working-directory: ./Back
-        run: mysql -h"127.0.0.1" -P"3307" -u root -ppassword test < './models/database/exportDB.sql'
+        run: mysql -h"127.0.0.1" -P"3306" -u root -ppassword test < './models/database/exportDB.sql'
 
       - name: Install Node.js Application 
         working-directory: ./Back
