--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -57,9 +57,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      # - name: Shutdown Ubuntu MySQL (SUDO)
-        # run: sudo service mysql restart
-
+      - name: Shutdown Ubuntu MySQL (SUDO)
+        run: sudo service mysql restart
 
       - name: Setup MariaDB data
         working-directory: ./Back
