--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,7 +4,7 @@ env:
   TOKEN_OLD_TEST: ${{ secrets.TOKEN_OLD_TEST }}
   JWTSECRETKEY: ${{ secrets.JWTSECRETKEY }}
   NODE_ENV: test
-  DB_HOST: "::1"
+  DB_HOST: "::1/128"
   DB_USER: developer
   DB_PASSWORD: rootPowa
   DB_NAME: test
