--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,9 +5,9 @@ env:
   JWTSECRETKEY: ${{ secrets.JWTSECRETKEY }}
   NODE_ENV: test
   DB_HOST: "::1"
-  DB_USER: githubTester
+  DB_USER: developer
   DB_PASSWORD: rootPowa
-  DB_NAME: nowastetest
+  DB_NAME: test
   DB_PORT: 3307
   CI: true
 
@@ -32,9 +32,9 @@ jobs:
       mariadb:
         image: mariadb:latest
         env:
-          MYSQL_USER: ${{ DB_USER }}
-          MYSQL_PASSWORD: ${{ DB_PASSWORD }}
-          MYSQL_DATABASE: ${{ DB_NAME }}
+          MYSQL_USER: developer
+          MYSQL_PASSWORD: rootPowa
+          MYSQL_DATABASE: test
           MYSQL_ROOT_PASSWORD: password
         ports:
           - 3307:3306
