--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -61,6 +61,9 @@ jobs:
       - name: Restat Ubuntu MySQL Service (SUDO)
         run: sudo service mysql restart
 
+      - name: Restat Ubuntu MySQL Service (SUDO)
+        run: netstat -tulpn
+
       - name: Setup MariaDB data
         working-directory: ./Back
         run: mysql -h"127.0.0.1" -P"3306" -u root -ppassword test < './models/database/exportDB.sql'
