--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,8 +36,8 @@ jobs:
           MYSQL_PASSWORD: rootPowa
           MYSQL_DATABASE: test
           MYSQL_ROOT_PASSWORD: password
-        # ports:
-          # - 3307:3306
+        ports:
+          - 3307:3306
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
@@ -66,7 +66,7 @@ jobs:
 
       - name: Setup MariaDB data
         working-directory: ./Back
-        run: mysql -h"127.0.0.1" -P"3306" -u root -ppassword test < './models/database/exportDB.sql'
+        run: mysql -h"127.0.0.1" -P"3307" -u root -ppassword test < './models/database/exportDB.sql'
 
       - name: Install Node.js Application 
         working-directory: ./Back
