Back.maria db migration (#8)
* [Back] firstfruit MariaDB migration on interest points

* [Back] Migration to mariadb done

* [Back]fix + test with mariadb

* [Back] Add test nearMe interestPointsRouteTest + redirection on login with old token with(or out) data (+tests)

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Update nodejs.yml

* Update nodejs.yml

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent nodejs workflow fail

* Prevent

--- a/Back/.envDefault
+++ b/Back/.envDefault
@@ -1,7 +1,12 @@
 NODE_ENV=development
 # Set your JTW token for test information here
-TOKEN_TEST=
+TOKEN_OLD_TEST=
 # Set your JTW secret key information here
 JWTSECRETKEY=
 # Set your database connection information here
 MONGO_KEY=
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_PORT=
