--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,7 +1,7 @@
 name: Node.js CI
 
 env:
-  TOKEN_UNKNOWN_TEST: ${{ secrets.TOKEN_UNKNOWN_TEST }}
+  TOKEN_UNKOWN_TEST: ${{ secrets.TOKEN_UNKOWN_TEST }}
   TOKEN_OLD_TEST: ${{ secrets.TOKEN_OLD_TEST }}
   JWTSECRETKEY: ${{ secrets.JWTSECRETKEY }}
   NODE_ENV: test
