--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,12 +2,12 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 name: Test, Build and Release apk
 on:
-  pull_request:
-    branches:
-      - master
   push:
     branches:
       - master
+    tags-ignore:
+      - 'v0.*'
+  pull_request:
 jobs:
 
   test:
@@ -36,7 +36,7 @@ jobs:
 
     - name: Flutter__Build
       working-directory: ./Front
-      run: flutter build apk --split-per-abi
+      run: flutter build apk --target-platform android-arm,android-arm64,android-x64 --no-shrink
 
 
   delivery:  
@@ -67,26 +67,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./Front/build/app/outputs/apk/release/app-armeabi-v7a-release.apk
-        asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}-armeabi-v7a.apk
-        asset_content_type: application/vnd.android.package-archive
-
-    - name: Upload release asset arm64-v8a
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./Front/build/app/outputs/apk/release/app-arm64-v8a-release.apk
-        asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}-arm64-v8a.apk
-        asset_content_type: application/vnd.android.package-archive
-
-    - name: Upload release asset x86_64
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./Front/build/app/outputs/apk/release/app-x86_64-release.apk
-        asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}-x86_64.apk
+        asset_path: ./Front/build/app/outputs/apk/release/app-release.apk
+        asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}.apk
         asset_content_type: application/vnd.android.package-archive
