--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,6 +38,12 @@ jobs:
       working-directory: ./Front
       run: flutter build apk --target-platform android-arm,android-arm64,android-x64 --no-shrink
 
+
+  delivery:  
+    name: Delivery APKs on Github package
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
     - name: Generate build number
       id: buildnumber
       uses: einaregilsson/build-number@v2 
