--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Setup MariaDB data
         working-directory: ./Back
-        run: mysql -h"127.0.0.1" -P"3307" -u developer -prootPowa test < './models/database/exportDB.sql'
+        run: mysql -h"::1" -P"3307" -u developer -prootPowa test < './models/database/exportDB.sql'
 
       - name: Install Node.js Application 
         working-directory: ./Back
