--- a/Front/pubspec.yaml
+++ b/Front/pubspec.yaml
@@ -8,14 +8,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  bloc: ^6.0.3
+  cupertino_icons: ^1.0.0
+  dio: ^3.0.10
+  flutter_bloc: ^6.0.6
   flutter_dotenv: ^2.1.0
-  cupertino_icons: ^0.1.0
-  flutter_map: ^0.9.0
-  bloc: ^4.0.0
-  flutter_bloc: ^4.0.0
-  url_launcher: ^5.4.7
-  dio: ^3.0.9
+  flutter_map: ^0.10.1+1
+  url_launcher: ^5.7.2
 
 dev_dependencies:
   flutter_test:
