--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -66,7 +66,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
-        release_name: nowaste-0.${{ steps.buildnumber.outputs.build_number }}
+        release_name: districtaid-0.${{ steps.buildnumber.outputs.build_number }}
         prerelease: false
 
     - name: Upload release asset armeabi
@@ -76,5 +76,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./Front/build/app/outputs/apk/release/app-release.apk
-        asset_name: nowaste-${{ steps.buildnumber.outputs.build_number }}.apk
+        asset_name: districtaid-${{ steps.buildnumber.outputs.build_number }}.apk
         asset_content_type: application/vnd.android.package-archive
