--- a/Back/package.json
+++ b/Back/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha --timeout 60000 --exit"
+    "test": "mocha --timeout 60000 --exit ./test/**.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
