--- a/Front/pubspec.yaml
+++ b/Front/pubspec.yaml
@@ -24,3 +24,6 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/
+    - assets/splashscreen_1920px.png
+    - assets/logo_small.png
