--- a/Back/package.json
+++ b/Back/package.json
@@ -4,21 +4,27 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha --timeout 60000 --exit"
+    "test": "mocha --timeout 60000 --exit ./test/**.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "geojson": "^0.5.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mariadb": "^2.2.0",
     "mocha": "^7.0.1",
+    "mongoose": "^5.11.12",
     "morgan": "~1.9.1",
     "supertest": "^4.0.2",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^12.2.0",
     "winston": "^3.2.1"
+  },
+  "engines": {
+    "node": "14.15"
   }
 }
